--- a/main.html
+++ b/main.html
@@ -4,46 +4,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
+  <!-- 폰트어썸 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- 구글 웹 폰트 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Gowun+Dodum&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400&display=swap" rel="stylesheet">
   <title>inae</title>
 </head>
 <body>
-  <div class="container">
-    <header class="header">
-      <h1 class="logo">
-        <a href="#">
-          <img src="./img/logo.png" width="200px">
-        </a>
-      </h1>
-      <nav class="nav">
-        <ul class="menu-list">
-          <li class="menu-item"><a href="#">HOME</a></li>
-          <li class="menu-item"><a href="#">ABOUT ME</a></li>                   
-          <li class="menu-item"><a href="#">PORTFOLIO</a></li>
-          <li class="menu-item"><a href="#">CONTACT</a></li>
-        </ul>
-      </nav>  
-    </header>
-    <section class="main">
-      <div class="img-container">
-        <img src="https://images.unsplash.com/photo-1535764558463-30f3af596bee?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-      </div>
-      <div class="text-container">
-        <h1>FRONT DEVELOPER</h1>
-        
-        <p>
-          안녕하세요. <br>
-          하루하루 성실하게 살아가고 싶은 인애입니다. <br>
-          살아가는게 지겹고 재미없어도 개발은 재밌으면 좋겠는데 <br>
-          아직은 재미있는지 모르겠어요. <br> 
-          재미있는 순간이 올때까지 <br>
-          열심히 키보드 두드려 보겠습니다. 
-        </p>
-      </div>
-    </section>
-  </div>
+  <aside class="side-bar con-min-width">
+    <div class="side-bar__status-ico">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav class="side-bar__menu-box-1">
+      <ul>
+        <li>
+          <a href="#">
+            <span><i class="fa-solid fa-house"></i></span>
+            <span>HOME</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span><i class="fa-solid fa-face-grin-squint"></i></span>
+            <span>ABOUT</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span><i class="fa-solid fa-desktop"></i></span>
+            <span>PORTPOLIO</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span><i class="fa-solid fa-keyboard"></i></span>
+            <span>STUDY</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </aside>
+
+  <section class="section-gallery">
+    <nav class="section-gallery__img-list">
+      <ul>
+        <li>
+          <a class="img-box" href="#"></a>
+        </li>
+      </ul>
+    </nav>
+  </section>
 </body>
 </html>
