--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
   <!-- 구글 웹 폰트 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400&display=swap" rel="stylesheet">
-  <title>inae</title>
-</head>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet"> 
+  <!-- JS -->
+  <script defer src="./js/main.js"></script>
 <body>
   <aside class="side-bar con-min-width">
     <div class="side-bar__status-ico">
@@ -22,25 +22,25 @@
     <nav class="side-bar__menu-box-1">
       <ul>
         <li>
-          <a href="#">
+          <a href="./main.html">
             <span><i class="fa-solid fa-house"></i></span>
             <span>HOME</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="./about.html">
             <span><i class="fa-solid fa-face-grin-squint"></i></span>
             <span>ABOUT</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="./portpolio.html">
             <span><i class="fa-solid fa-desktop"></i></span>
             <span>PORTPOLIO</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="./study.html">
             <span><i class="fa-solid fa-keyboard"></i></span>
             <span>STUDY</span>
           </a>
@@ -48,12 +48,14 @@
       </ul>
     </nav>
   </aside>
-
   <section class="section-gallery">
     <nav class="section-gallery__img-list">
       <ul>
         <li>
-          <a class="img-box" href="#"></a>
+          <p class="typing-text">Welcome to my page!</p>
+          <a class="img-box" href="#">
+            <img src="./img/main.jpg" alt="#">
+          </a>
         </li>
       </ul>
     </nav>
